--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -56,7 +56,7 @@
 
         </div>
         
-        <div id="interestcon"> 
+        <!-- <div id="interestcon"> 
             
             <h1> interests </h1> 
 
@@ -71,7 +71,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
         <div id="footer">
             <h2> liyah shang | 2025 </h2>
