--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,22 +25,20 @@
 
             <h1> summary </h1>
 
-            <div id="summarycon1">
+            <div id="summarycon2">
                 
                 <p> the most influential person you'll ever meet </p>
                 
-                <nav>
-                    <ul id="summarylist">
-                        <li> san francisco, california </li>
-                        <li> liyahshang2010gmail.com </li>
-                    </ul>
-                </nav>
+                <ul id="summarylist">
+                    <li> > san francisco, california </li>
+                    <li> > liyahshang2010gmail.com </li>
+                </ul>
 
             </div>
 
         <div> 
 
-        </div id="edcon">
+        <div id="edcon">
 
             <h1> education </h1>
 
@@ -51,9 +49,9 @@
 
             </div>
 
-        <div> 
+        </div> 
 
-        <div id="profcon"> 
+        <!-- <div id="profcon"> 
 
             <h1> professional experience </h1>
 
@@ -65,7 +63,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
     </body>
 
