--- a/pages/resume.html
+++ b/pages/resume.html
@@ -30,9 +30,11 @@
                 <p> the most influential person you'll ever meet </p>
                 
                 <ul id="summarylist">
-                    <li> > san francisco, california </li>
-                    <li> > liyahshang2010gmail.com </li>
+                    <li> san francisco, california </li>
+                    <li> liyahshang2010gmail.com </li>
                 </ul>
+
+                <img src="\images\char-walking-m.gif">
 
             </div>
 
