new index code, aboutme/resume font, contact page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <div id="maincon">
 
-            <h1> liyah shang </h1> 
-            <h2> the portflio </h2> 
+            <h1 id="toggleB"> liyah shang </h1> 
+            <h2> the portfolio </h2> 
 
             <nav id="navcon"> 
                 <ul id="primarynav">
@@ -35,5 +35,7 @@
         </div>
 
     </body>
+
+    <script src="./scripts/index.js"> </script>
 
 </html>
