--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body> 
 
+        <!-- <div class="loader"></div> -->
+
         <div id="maincon">
 
             <h1 id="toggleB"> liyah shang </h1> 
