--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -28,10 +28,12 @@
 
             <div id="aboutcon2"> 
 
-                <img src="\images\me\headchibi.png">
+                <img src="\images\me\fullbodychibi2.png">
 
                 <div id="aboutcon3"> 
-                    <h2> liyah shang </h1>
+                    <h2> liyah shang! </h2>
+                    <h3> age: 15 years old </h3>
+                    <h3> current school: lowell high school </h3> 
                     <p> It was a good idea. At least, they all thought it was a good idea at the time. Hindsight would reveal that in reality,
                     it was an unbelievably terrible idea, but it would take another week for them to understand that. Right now, at this
                     very moment. they all agreed that it was the perfect course of action for the current situation. </p>
@@ -69,7 +71,7 @@
                 <p id="topr" onmouseover="this.style.background='rgba(223, 236, 255, 1)';"
                     onmouseout="this.style.background='rgb(216, 224, 237)';" class="tester"> pondering life <br> and death~ </p>
                 <p id="last" id="topr" onmouseover="this.style.background='rgba(223, 236, 255, 1)';"
-                    onmouseout="this.style.background='rgb(216, 224, 237)';" class="tester"> being a big back~ </p>
+                    onmouseout="this.style.background='rgb(216, 224, 237)';" class="tester"> uh what else~ </p>
         
             </div>
         
