--- a/pages/test.html
+++ b/pages/test.html
@@ -58,16 +58,14 @@
 
         <div id="edcon2">
 
-          <p id="first" class="hover-underline"> sunset elementary school </p>
-          <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
+          <p> ⬤ </p> 
+          <p> sunset elementary school </p>
 
-          <p class="hover-underline"> apg middle school </p>
-          <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
+          <p> ⬤ </p>
+          <p> a.p.g middle school </p>
 
-          <p class="hover-underline"> lowell high school </p>
-          <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
-
-          <p class="hover-underline" id="last"> near future: qing hua university :D </p>
+          <p> ⬤ </p>
+          <p> lowell high school </p>
 
         </div>
 
