--- a/pages/resume.html
+++ b/pages/resume.html
@@ -54,16 +54,16 @@
 
             <div id="edcon2">
                 
-                <p id="first"> sunset elementary school </p>
+                <p id="first" class="hover-underline"> sunset elementary school </p>
                 <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
 
-                <p> apg middle school </p>
+                <p class="hover-underline"> apg middle school </p>
                 <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
 
-                <p> lowell high school </p> 
+                <p class="hover-underline"> lowell high school </p> 
                 <p id="arrow"> ˋ°•*⁀˚»-♡→ </p>
 
-                <p id="last"> near future: qing hua university :D </p>
+                <p id="last" class="hover-underline"> near future: qing hua university :D </p>
 
             </div>
 
